<resources>
    <string name="app_name">My Tournament</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_competition">CompetitionActivity</string>
    <string name="select_sport">Выберите вид спорта </string>
    <string name="select_format">Выберите формат матчей</string>
    <string name="select_date">Выберите дату начала</string>
    <string name="select_teams">Добавление команды</string>
    <string name="new_team">Новая команда</string>
    <string name="submit">Готово!</string>
    <string name="enter_info">Дополнительная информация</string>
    <string name="enter_team_name">Название команды</string>
    <string name="enter_competition_name">Название соревнования</string>
    <string name="enter_fio">Введите ФИО</string>
    <string name="players">СОСТАВ</string>
    <string name="info">ИНФОРМАЦИЯ</string>
    <string name="matches">МАТЧИ</string>
    <string name="standings">ТУРНИРНАЯ ТАБЛИЦА</string>
    <string name="top">ЛУЧШИЕ</string>
    <string name="statistics">СТАТИСТИКА</string>
    <string name="teams">КОМАНДЫ</string>
    <string name="select_date_born">Выберите дату рождения</string>
    <string name="select_number">Выберите номер</string>
    <string name="selected_teams_count">Выбрано %d команд</string>
    <string name="teams_selected_succesful">Успешно добавлены %d команд!</string>
    <string name="name">Название</string>
    <string name="points">О</string>
    <string name="goals">Г</string>
    <string name="played">И</string>
    <string name="won">В</string>
    <string name="drawn">Н</string>
    <string name="lost">П</string>
    <string name="back_to_main">В главное меню</string>
    <string name="enter_match_stage">Введите этап соревнования </string>
    <string name="select_match_date">Выберите дату матча</string>
    <string name="select_match_time">Выберите время матча</string>
    <string name="enter_match_place">Введите место матча</string>
    <string name="select_first_team">Выберите первую команду</string>
    <string name="select_second_team">Выберите вторую команду</string>
    <string name="load_logo">Загрузить логотип</string>
    <string name="next_time">NEXT TIME</string>
    <string name="time">%d \n time</string>
    <string name="match_over">Матч закончен!</string>
    <string name="share">SHARE</string>
    <string name="yellow_card">ЖК! </string>
    <string name="red_card">КК! </string>
    <string name="goal">ГОЛ! </string>
    <string name="offline_signin">Войти оффлайн</string>

</resources>
