<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_matches"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/matches" />
        <item
            android:id="@+id/nav_standings"
            android:icon="@drawable/ic_format_list_numbered_black_24dp"
            android:title="@string/standings" />
        <item
            android:id="@+id/nav_teams"
            android:icon="@drawable/ic_people_outline_black_24dp"
            android:title="@string/teams" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_assessment_black_24dp"
            android:title="@string/statistics" />
        <item
            android:id="@+id/nav_best"
            android:icon="@drawable/ic_star_border_black_36dp"
            android:title="@string/top" />
        <item
            android:id="@+id/nav_back"
            android:icon="@drawable/ic_undo_black_24dp"
            android:title="@string/back_to_main" />
    </group>

</menu>
