<!--ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"!-->

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:orientation="vertical"
        tools:context="com.diplom.mytournament.fragments.details_redact.AddCompetitionFragment">

        <EditText
            android:id="@+id/player_fio_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:hint="@string/enter_fio" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/select_number"
            android:textSize="@dimen/text_info" />

        <EditText
            android:id="@+id/number_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_date_born"
            android:textSize="@dimen/text_info" />

        <DatePicker
            android:id="@+id/player_date_born"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <EditText
            android:id="@+id/player_info_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:hint="@string/enter_info"/>

        <Button
            android:id="@+id/player_submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/colorDarkGray"
            android:text="@string/submit"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_title" />
    </LinearLayout>
<!--/ScrollView!-->
