<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_small"
    tools:context="com.diplom.mytournament.fragments.details_redact.CreateTeamFragment">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/edit_team_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_team_name"
        android:textSize="@dimen/text_info" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_info"
        android:gravity="start"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@color/colorDarkGray"
        android:text="@string/submit"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_standings"/>

</LinearLayout>
