<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:orientation="vertical"
        tools:context="com.diplom.mytournament.fragments.details_redact.AddCompetitionFragment">

        <EditText
            android:id="@+id/competition_title_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:hint="Название соревнования" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/select_sport"
            android:textSize="@dimen/text_info" />

        <Spinner
            android:id="@+id/kind_of_sport_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/select_format"
            android:textSize="@dimen/text_info" />

        <Spinner
            android:id="@+id/format_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_info" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:textSize="@dimen/text_info" />

        <DatePicker
            android:id="@+id/competition_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <EditText
            android:id="@+id/comp_info_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:hint="@string/enter_info"/>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/colorDarkGray"
            android:text="@string/submit"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_title" />
    </LinearLayout>
</ScrollView>


